--- a/nginx/andstuff.org
+++ b/nginx/andstuff.org
@@ -21,16 +21,16 @@ server {
     rewrite ^/DateQuestions$               http://scottmoonen.com/2008/03/14/date-questions/ permanent;
     rewrite ^/Deuteronomy$                 http://scottmoonen.com/2007/11/24/deuteronomy/ permanent;
     rewrite ^/Exodus$                      http://scottmoonen.com/2007/09/27/exodus/ permanent;
-    rewrite ^/FunctionalPython$            http://scottmoonen.com/2005/06/09/functional-python/ permanent;
+    rewrite ^/FunctionalPython$            http://fullvalence.com/2005/06/09/functional-python/ permanent;
     rewrite ^/Genesis$                     http://scottmoonen.com/2004/02/27/genesis/ permanent;
     rewrite ^/GlobalWarming$               http://scottmoonen.com/2006/02/07/global-warming/ permanent;
     rewrite ^/GodMovesInAMysteriousWay$    http://scottmoonen.com/2006/11/01/god-moves-in-a-mysterious-way/ permanent;
-    rewrite ^/GoedelEscherBach$            http://scottmoonen.com/2005/03/25/goedel-escher-bach/ permanent;
+    rewrite ^/GoedelEscherBach$            http://fullvalence.com/2005/03/25/goedel-escher-bach/ permanent;
     rewrite ^/HolyTrinity$                 http://scottmoonen.com/2005/04/11/holy-trinity/ permanent;
     rewrite ^/HomeMaps$                    http://scottmoonen.com/2006/06/23/home-maps/ permanent;
     rewrite ^/HoseaDiscussion$             http://scottmoonen.com/2004/06/08/hosea/ permanent;
     rewrite ^/Immanuel$                    http://scottmoonen.com/2007/01/03/immanuel/ permanent;
-    rewrite ^/IntroductionToPointers$      http://scottmoonen.com/2004/10/02/introduction-to-pointers-in-c/ permanent;
+    rewrite ^/IntroductionToPointers$      http://fullvalence.com/2004/10/02/introduction-to-pointers-in-c/ permanent;
     rewrite ^/Joshua$                      http://scottmoonen.com/2007/12/03/joshua/ permanent;
     rewrite ^/JoyAtTheEndOfTheTether$      http://scottmoonen.com/2005/06/28/joy-at-the-end-of-the-tether/ permanent;
     rewrite ^/Judges$                      http://scottmoonen.com/2007/12/23/judges/ permanent;
@@ -45,14 +45,14 @@ server {
     rewrite ^/Photos$                      http://moonen.smugmug.com/Family/Family/2359327_K9APd permanent;
     rewrite ^/Poetry$                      http://scottmoonen.com/category/poetry/ permanent;
     rewrite ^/ProofOfTheNonExistenceOfGod$ http://scottmoonen.com/2007/06/09/proof-of-the-non-existence-of-god/ permanent;
-    rewrite ^/PythonPersistence$           http://scottmoonen.com/2004/10/01/python-persistence/ permanent;
-    rewrite ^/PythonSpikes$                http://scottmoonen.com/category/python/ permanent;
+    rewrite ^/PythonPersistence$           http://fullvalence.com/2004/10/01/python-persistence/ permanent;
+    rewrite ^/PythonSpikes$                http://fullvalence.com/category/python/ permanent;
     rewrite ^/PurposeDrivenLife$           http://scottmoonen.com/2005/01/13/purpose-driven-life/ permanent;
     rewrite ^/Recipes$                     http://scottmoonen.com/category/recipes/ permanent;
     rewrite ^/RedemptionAccomplishedAndApplied$ http://scottmoonen.com/2005/06/20/redemption-accomplished-and-applied/ permanent;
     rewrite ^/ReflectionsOfAnOctogenarian$ http://scottmoonen.com/2006/11/08/reflections-of-an-octogenarian/ permanent;
     rewrite ^/Resume$                      http://www.linkedin.com/in/smoonen permanent;
-    rewrite ^/ResumeAdvice$                http://scottmoonen.com/2006/06/09/resume-keywords/ permanent;
+    rewrite ^/ResumeAdvice$                http://fullvalence.com/2006/06/09/resume-keywords/ permanent;
     rewrite ^/Ruth$                        http://scottmoonen.com/2008/01/04/ruth/ permanent;
     rewrite ^/Salsa$                       http://scottmoonen.com/2006/01/16/salsa/ permanent;
     rewrite ^/SituationalCatechism$        http://scottmoonen.com/category/catechism/ permanent;
